--- a/src/styles/CalculatorButton.css
+++ b/src/styles/CalculatorButton.css
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 0.5px solid var(--gray);
 }
 
 .gray {
@@ -12,4 +13,8 @@
 
 .orange {
   background-color: var(--orange);
+}
+
+.large {
+  grid-column: 1/3;
 }
