--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -19,3 +19,14 @@ body {
 *::before {
   box-sizing: inherit;
 }
+
+.main-container {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+  width: 120rem;
+  max-width: 90%;
+  margin: 0 auto;
+  height: 100vh;
+
+}
