--- a/src/styles/HomeRoute.css
+++ b/src/styles/HomeRoute.css
@@ -7,12 +7,12 @@
   margin-top: 5rem;
 }
 
-h2 {
+.home-container h2 {
   font-size: 4rem;
   color: var(--orange);
 }
 
-p {
+.home-container p {
   font-size: 2.5rem;
   color: var(--purple);
   font-weight: 500;
